<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.teddystagram.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/_start_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/_end_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="@id/_end_guide"
            app:layout_constraintStart_toStartOf="@id/_start_guide"
            app:layout_constraintTop_toBottomOf="@+id/iv_title">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- EditText - Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/_end_guide"
            app:layout_constraintStart_toStartOf="@id/_start_guide"
            app:layout_constraintTop_toBottomOf="@+id/tf_email">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button -->
        <Button
            android:id="@+id/bt_email_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.createAndLoginEmail(emailEdittext.getText().toString(), passwordEdittext.getText().toString())}"
            android:text="@string/signin_email"
            android:theme="@style/ButtonStyle"
            app:layout_constraintBottom_toTopOf="@+id/bt_google"
            app:layout_constraintEnd_toEndOf="@id/_end_guide"
            app:layout_constraintStart_toStartOf="@id/_start_guide" />

        <Button
            android:id="@+id/bt_google"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_signin_google"
            android:onClick="googleLogin"
            android:text="@string/signin_google"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/bt_facebook"
            app:layout_constraintEnd_toEndOf="@id/_end_guide"
            app:layout_constraintStart_toStartOf="@id/_start_guide" />


        <Button
            android:id="@+id/bt_facebook"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/btn_signin_facebook"
            android:onClick="facebookLogin"
            android:text="@string/signin_facebook"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/_end_guide"
            app:layout_constraintStart_toStartOf="@id/_start_guide" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>